Type conversions are working